# Thermodynamic-module

./: .gitignore  Makefile  README.md  setup.cfg
src/: __init__.py
src/thermodynamics/: assumptions.py
src/thermodynamics/assumptions/: assumptions.py  ideal_gas.py
tests/thermodynamics/: test_assumptions.py
tests/thermodynamics/assumptions/: test_ideal_gas.py
