[metadata]
name = thermodynamics
version = 1.0.0
description = Module for easy implementations of thermodynamics models and assumptions
author = Kai Jie Chow
keywords = Thermodynamics

[options]
package_dir= 
    =src
packages = find:
python_requires = >=3.7
install_requires = 
    expression-solver @ git+https://github.com/kjc1998/Expression-Solver.git#egg=Expression-Solver

[options.packages.find]
where=src
exclude=
    tests

[options.extras_require]
test = 
    mypy
    pytest
    pytest-cov
    pytest-mypy